# nedots.rs

./: .nedots.yml  Cargo.toml  PKGBUILD  README.md
.builds/: basic.yml  debug.yml  tests_docs.yml  tests_integration.yml  tests_release.yml
src/: errors.rs  lib.rs  main.rs
src/cmd/: backup.rs  clean.rs  completions.rs  init.rs  install.rs  mod.rs  nedots.rs  sync.rs
src/models/: config.rs  git_repo.rs  mod.rs
src/ops/: copy.rs  mod.rs
src/utils/: misc.rs  mod.rs  paths.rs  spinner.rs
